# Ai_Resume_Reviewer

./: .gitignore  analyze.py  main.py  parser.py  pyproject.toml
